[package]
name = "cocorou"
version = "0.1.0"
authors = "Blank User"
edition = "2024"
description = "A fast & light hybrid coroutines library"
readme = "README.md"
repository = "https://github.com/blankuserrr/cocorou"
categories = ["coroutines", "stackless", "stackful"]
license = "MIT OR Apache-2.0"

[dependencies]
